--- a/index.html
+++ b/index.html
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title> Menu </title>
-<script src="https://simplycodingcourses.com/files/simplyjs/simply.js"></script>
-<script>
-function start(){
-sjs.open();
-var menu_text = new sjs.Text("MENU",28,"blue");
-menu_text.centerH();
-var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Only eat enemies smaller than you!",28,"#ff0");
-game_text.centerH().offset(0, 30);
-var startBtn = new sjs.Button("Start", function(){
-window.location = "fish.html";
-});
-startBtn.center();
-var info_text = new sjs.Text("Created By Aaron Cunningham",20,"black");
-
-info_text.bottom().centerH();
-}
-
-</script>
+<title> Portfolio </title>
 </head>
-<body onload="start()">
-<h1> Fish </h1>
+<body>
+<h1> My Portfolio </h1>
+<a href="Game Design/Pong/pong.html">Pong Game</a>
+<a href="Game Design/Fish/index.html">Fish Game</a>
 
-<div id="target" style="margin:auto;background:grey;"></div>
+<a href="Game Design/Platform/index.html">Platform Game</a>
+
+<a href="Game Design/ Custom Game/index.html">Custom Game</a> More Coming Soon
+
+
 </body>
 </html>
