--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href="Game Design/Pong/pong.html">Pong Game</a>
 <a href="Game Design/Fish/index.html">Fish Game</a>
 
-<a href="Game Design/Platform/index.html">Platform Game</a>
+<a href="Game Design/Platform/platform.html">Platform Game</a>
 
 <a href="Game Design/ Custom Game/index.html">Custom Game</a> More Coming Soon
 
