--- a/Game Design/Pong/pong.html
+++ b/Game Design/Pong/pong.html
@@ -9,7 +9,7 @@ var wallpaper = new sjs.Image("Images/Xbox12.png")
 wallpaper.setSize(500,400)
 
 //ball
-var ball =new sjs.Image("Images/xbox.png");
+var ball =new sjs.Image("Images/Xbox.png");
 ball.type = "ball" ;
 ball.setSize(50.50)
 ball.center();
