--- a/Game Design/Fish/index.html
+++ b/Game Design/Fish/index.html
@@ -5,12 +5,14 @@
 <script src="https://simplycodingcourses.com/files/simplyjs/simply.js"></script>
 <script>
 function start(){
-sjs.open();
+sjs.open("taget",1250,750);
+var image = new sjs.Image("Images/th.jpg");
+image.setSize(1250, 750);
 var menu_text = new sjs.Text("MENU",28,"blue");
 menu_text.centerH();
-var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Only eat enemies smaller than you!",28,"#ff0");
+var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Only Destroy enemies smaller than you!",28,"#ff0");
 game_text.centerH().offset(0, 30);
-var startBtn = new sjs.Button("Start", function(){
+var startBtn = new sjs.Button("Dominate the Empire", function(){
 window.location = "fish.html";
 });
 startBtn.center();
@@ -22,7 +24,7 @@ info_text.bottom().centerH();
 </script>
 </head>
 <body onload="start()">
-<h1> Fish </h1>
+<h1> Star Wars Space Adventure </h1>
 
 <div id="target" style="margin:auto;background:grey;"></div>
 </body>
