--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title> Portfolio </title>
+<title> Menu </title>
+<script src="https://simplycodingcourses.com/files/simplyjs/simply.js"></script>
+<script>
+function start(){
+sjs.open("taget",1250,750);
+var image = new sjs.Image("Images/th.jpg");
+image.setSize(1250, 750);
+var menu_text = new sjs.Text("MENU",28,"blue");
+menu_text.centerH();
+var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Only Destroy enemies smaller than you!",28,"#ff0");
+game_text.centerH().offset(0, 30);
+var startBtn = new sjs.Button("Dominate the Empire", function(){
+window.location = "fish.html";
+});
+startBtn.center();
+var info_text = new sjs.Text("Created By Aaron Cunningham",20,"black");
+
+info_text.bottom().centerH();
+}
+
+</script>
 </head>
-<body>
-<h1> My Portfolio </h1>
-<a href="Game Design/Pong/pong.html">Pong Game</a>
-<a href="Game Design/Fish/index.html">Fish Game</a>
+<body onload="start()">
+<h1> Star Wars Space Adventure </h1>
 
-<a href="Game Design/Platform/platform.html">Platform Game</a>
-
-<a href="Game Design/ Custom Game/index.html">Custom Game</a> More Coming Soon
-
-
+<div id="target" style="margin:auto;background:grey;"></div>
 </body>
 </html>
