--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ menu_text.centerH();
 var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Only Destroy enemies smaller than you!",28,"#ff0");
 game_text.centerH().offset(0, 30);
 var startBtn = new sjs.Button("Dominate the Empire", function(){
-window.location = "fish.html";
+window.location = "Fish.html";
 });
 startBtn.center();
 var info_text = new sjs.Text("Created By Aaron Cunningham",20,"black");
