--- a/gameover.html
+++ b/gameover.html
@@ -7,7 +7,7 @@
 <script>
 function start(){
 sjs.open("target",1250,750);
-var image = new sjs.Image("Images/bruh.gif");
+var image = new sjs.Image("Images/Bruh.gif");
 image.setSize(sjs.getWidth(),sjs.getHeight());
 
 
