--- a/Fish.html
+++ b/Fish.html
@@ -7,7 +7,7 @@
 function start(){
 sjs.open("target", 1250, 750);
 //Background Music
-var playM = new Audio('Music/NF.mp3');
+var playM = new Audio('Music/CB.mp3');
 var toggle = true;
 var musicOn = false;
 sjs.keyDown(SPACE_KEY, function(){
