--- a/Fish.html
+++ b/Fish.html
@@ -17,14 +17,15 @@ playM.play();
 musicOn = true;	
 } else {
 playM.pause();
-musicOn = false;
+musicOn = false
+}	
 toggle = false;
 setTimeout(function(){
 toggle = true;
 },1000);
 }	
 
-}
+
 });
 var speed = 3;
 
